--- a/v2/find-project-summary.html
+++ b/v2/find-project-summary.html
@@ -39,8 +39,8 @@
 				<a href="../" class="govuk-header__link govuk-header__link--homepage">
 					<span class="govuk-header__logotype">
 						<!--[if gt IE 8]><!-->
-						<img src="../assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image" width="36"
-							height="32">
+						<img src="../assets/images/govuk-mask-icon.svg" class="govuk-header__logotype-crown-fallback-image"
+							width="36" height="32">
 						<!--<![endif]-->
 						<!--[if IE 8]>
           <img src="../assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32">
@@ -160,7 +160,18 @@
 					<p class="govuk-body"><strong>Project aim: </strong>The project will use funding to improve existing
 						green
 						spaces and create new ones for the local area.</p>
+					<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 					<dl class="govuk-summary-list">
+						<div class="govuk-summary-list__row">
+							<dt class="govuk-summary-list__key">
+								Project outcomes:
+							</dt>
+							<dd class="govuk-summary-list__value">
+								<strong class="govuk-tag govuk-tag--grey">AIR QUALITY (N02)</strong>
+								<strong class="govuk-tag govuk-tag--grey">GREEN SPACES</strong>
+								<strong class="govuk-tag govuk-tag--grey">TREES PLANTED</strong>
+							</dd>
+						</div>
 						<div class="govuk-summary-list__row">
 							<dt class="govuk-summary-list__key">
 								Project outcomes:
